Macro/skim/logs/19545448_19.err
input_line_9:2:37: error: expected expression
 FlatMix(19*100000, (19+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                    ^
